# proxmox-swap

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-swarm.yml  main.py  pyproject.toml  requirements.txt  test_pve_api.py
.github/workflows/: build-push.yml
app/: auth.py  config.py  models.py  pve.py  routes.py  state.py  watchdog.py
static/: app.js  index.html  notify.js  settings.js  style.css  timer.js
