[project]
name = "proxmox-swap"
version = "0.1.0"
description = "Proxmox swap manager"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "aiofiles==25.1.0",
    "python-multipart==0.0.31",
    "authlib==1.7.2",
]

[project.scripts]
proxmox-swap = "main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
